Fix layout bug related to expand button

--- a/src/BFS/BFS.css
+++ b/src/BFS/BFS.css
@@ -32,7 +32,7 @@ p {
 
 .expand-button {
     padding-top: 2rem;
-    padding-right: 6.2%;
+    padding-right: 2.7rem;
 }
 
 .intro-section-content {
